--- a/Project2/project2_code/notebooks/Partde_Classification.ipynb
+++ b/Project2/project2_code/notebooks/Partde_Classification.ipynb
@@ -19,10 +19,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "import sklearn.linear_model as sk\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Import self-made modules\n",
-    "from project2_code import LogisticRegression, accuracy\n",
-    "\n"
+    "from project2_code import LogisticRegression, accuracy, NeuralNetwork"
    ]
   },
   {
@@ -34,45 +34,44 @@
    "source": [
     "data = load_breast_cancer()\n",
     "X = data['data']\n",
-    "y = data['target']"
+    "y = data['target']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state=5)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "9d9add5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lr = LogisticRegression()\n",
-    "lr.fit(X, y)\n",
-    "y_pred = lr.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4ed0c51d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9173989455184535"
+       "0.9846153846153847"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy(y_pred, y)"
+    "lr = LogisticRegression(learning_rate=0.01, max_iterations=100)\n",
+    "lr.fit(X_train_scaled, y_train)\n",
+    "y_pred = lr.predict(X_train_scaled)\n",
+    "accuracy(np.array(y_pred), y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8ae5062a",
    "metadata": {},
    "outputs": [
@@ -87,19 +86,53 @@
     {
      "data": {
       "text/plain": [
-       "0.9173989455184535"
+       "0.9912087912087912"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lr_sk = sk.LogisticRegression(penalty='none', solver='sag')\n",
-    "lr_sk.fit(X, y)\n",
-    "lr_sk.score(X, y)"
+    "lr_sk.fit(X_train_scaled, y_train)\n",
+    "lr_sk.score(X_train_scaled, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4a9c0f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9868131868131869"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "network = NeuralNetwork(X_train_scaled.shape[1], regr_or_class='class')        \n",
+    "network.add_layer(10)\n",
+    "network.add_layer(1)\n",
+    "network.train(X_train_scaled, y_train, minibatches=4, num_epochs = 1000, learning_rate=0.01)\n",
+    "y_pred = network.predict(X_train_scaled)\n",
+    "accuracy(np.array(y_pred), y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f580dd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
